Added wp-config and htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,9 @@
-#set max upload file size
-php_value upload_max_filesize 128M
-
-#set max post size
-php_value post_max_size 128M
-
-# BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteBase /golfmatch/wp/
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /golfmatch/wp/index.php [L]
 </IfModule>
-# END WordPress
+
